Initial version of sync loop to ensure ACI is always up to date

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ output_file = networking_aci/locale/networking-aci.pot
 [entry_points]
 console_scripts =
     neutron-aci-agent = networking_aci.plugins.ml2.drivers.mech_aci.agent.entry_point:main
+    neutron-aci-tool = networking_aci.utils.aci_tool:main
 neutron.ml2.mechanism_drivers =
     aci = networking_aci.plugins.ml2.drivers.mech_aci.driver:CiscoACIMechanismDriver
 neutron.db.alembic_migrations =
