--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@
 pbr>=1.6
 Babel>=1.3
 
-oslo.config>=2.3.0 # Apache-2.0
-oslo.i18n>=1.5.0  # Apache-2.0
-oslo.log>=1.8.0,<1.12.0 # Apache-2.0
-oslo.serialization>=1.4.0               # Apache-2.0
-oslo.utils>=2.0.0 # Apache-2.0
+oslo.config>=3.7.0  # Apache-2.0
+oslo.i18n>=2.1.0  # Apache-2.0
+oslo.log>=1.14.0  # Apache-2.0
+oslo.serialization>=1.10.0              # Apache-2.0
+oslo.utils>=3.5.0                       # Apache-2.0
 
 python-neutronclient
 hash-ring
