--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ oslo.utils>=3.5.0                       # Apache-2.0
 
 python-neutronclient
 neutron-lib # Apache-2.0
-hash-ring
+uhashring>=1.0
 
-#apicapi>=1.0.6
+acicobra>=4.2-2.68
+acimodel>=4.2-2.68
