--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,6 @@ oslo.utils>=3.5.0                       # Apache-2.0
 
 python-neutronclient
 neutron-lib # Apache-2.0
-hash-ring
+uhashring>=2.1
 
 #apicapi>=1.0.6
