--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ cache:
   pip: true
 matrix:
   include:
-  - python: "2.7"
+  - python: "3.6"
     env:
-    - TOXENV=py27
-    - NEUTRON_SOURCE=git+https://github.com/sapcc/neutron.git@stable/queens-m3#egg=neutron
+    - TOXENV=py36
+    - NEUTRON_SOURCE=git+https://github.com/sapcc/neutron.git@stable/ussuri-m3#egg=neutron
 install:
 - pip install tox-travis
 script: tox
