Get tox tests running without any extras
We need to remove aci dependencies from the requirements, as with them
present we cannot run the tests and they are not published by Cisco.

We also need to pin the pip version, as at the time of this writing URL
dependencies are not supported. When they will be supported by a current
release this can be removed again. See https://github.com/pypa/pip/issues/8253

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,29 @@
 [tox]
 envlist = py27,py36
-minversion = 1.6
+minversion = 3.2
 skipsdist = True
+requires = virtualenv >= 20
+           tox-run-before
 
 [testenv]
 usedevelop = True
-install_command = pip install -c {env:UPPER_CONSTRAINTS_FILE:https://raw.githubusercontent.com/sapcc/requirements/stable/ussuri-m3/upper-constraints.txt} -r requirements.txt -r test-requirements.txt -U {opts} {packages}
+install_command = pip install -v -c {env:UPPER_CONSTRAINTS_FILE:https://raw.githubusercontent.com/sapcc/requirements/stable/ussuri-m3/upper-constraints.txt} -r requirements.txt -r test-requirements.txt -U {opts} {packages}
+# pip 20.2.3 is used until constraints as urls are reintroduced in pip
+# see https://github.com/pypa/pip/issues/8253 or PR 9673 (currently merged, not released)
 setenv = VIRTUAL_ENV={envdir}
+         VIRTUALENV_PIP=20.2.3
          PYTHONWARNINGS=default::DeprecationWarning
 deps = -r{toxinidir}/test-requirements.txt
        -e{env:NEUTRON_SOURCE:git+https://github.com/sapcc/neutron.git@stable/ussuri-m3#egg=neutron}
 whitelist_externals = sh
+                      sed
+download = True
+
+# remove aci dependencies from requirements, as Cisco does not put them on pypi nor
+# is there another easy way for them to be publicly installed without owning an APIC
+run_before = sed -ri 's/^(aci(cobra|model))/#\1/' requirements.txt
+commands_pre = sed -ri 's/^#(aci(cobra|model))/\1/' requirements.txt
+
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
