--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,22 @@
 [tox]
 envlist = py27,py36
-minversion = 1.6
+minversion = 3.2
 skipsdist = True
+requires = virtualenv >= 20
 
 [testenv]
 usedevelop = True
 install_command = pip install -c {env:UPPER_CONSTRAINTS_FILE:https://raw.githubusercontent.com/sapcc/requirements/stable/ussuri-m3/upper-constraints.txt} -r requirements.txt -r test-requirements.txt -U {opts} {packages}
+# pip 20.2.3 is used until constraints as urls are reintroduced in pip
+# see https://github.com/pypa/pip/issues/8253 or PR 9673 (currently merged, not released)
 setenv = VIRTUAL_ENV={envdir}
+         VIRTUALENV_PIP=20.2.3
          PYTHONWARNINGS=default::DeprecationWarning
 deps = -r{toxinidir}/test-requirements.txt
        -e{env:NEUTRON_SOURCE:git+https://github.com/sapcc/neutron.git@stable/ussuri-m3#egg=neutron}
 whitelist_externals = sh
 commands = python setup.py testr --slowest --testr-args='{posargs}'
+download = True
 
 [testenv:pep8]
 commands =
