--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,9 @@ data_files =
     /etc/neutron/plugins/ml2 =
         etc/neutron/plugins/ml2/ml2_conf_aci.ini.sample
 
+[options.extras_require]
+acicobra = acicobra>=4.2-2.68; acimodel>=4.2-2.68
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
