Use valid version for acicobra/acimodel
4.2-2.68 is not a valid version specification for recent versions of
pip. So, besides the acicobra/acimodels package not being publicly
available it also has an invalid version number, meaning we cannot just
install it as a dependency without repackaging it. As the minor version
of the package does not matter for us at the moment we'll just require
it to be >=4.2.

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ data_files =
         etc/neutron/plugins/ml2/ml2_conf_aci.ini.sample
 
 [options.extras_require]
-acicobra = acicobra>=4.2-2.68; acimodel>=4.2-2.68
+acicobra = acicobra>=4.2; acimodel>=4.2
 
 [build_sphinx]
 source-dir = doc/source
