--- a/.github/workflows/run-tox.yml
+++ b/.github/workflows/run-tox.yml
@@ -2,14 +2,14 @@ name: run-tox
 on:
   push:
     branches:
-      - stable/yoga-m3
+      - stable/bobcat-m3
   pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.8]
+        python: [3.10]
     steps:
       - uses: actions/checkout@v2
       - name: Setup python
